15-01/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grefana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiko3-ingress
  namespace: taiko3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.com
      http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: demoapp
              port:
                number: 8282
